add pagination using kaminari gem

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -43,7 +43,7 @@
          </tbody>
        </table>
 
-       <%#= paginate @users %>
+      <%= paginate @users %>
 
-          </div>
-        </div>
+    </div>
+  </div>
