change devise login path to new post page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,5 @@
  */
   @import "bootstrap-sprockets";
   @import "bootstrap";
-  /* @import "bootstrap/theme";
-  @import "style"; */
+  @import "bootstrap/theme";
+  @import "style";
