--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DojoForum</title>
+    <title>Dojo Forum</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,42 +10,45 @@
 
   <body>
 
-    <!-- 導覽列 -->
-          <nav class="navbar navbar-default">
-            <div class="container-fluid">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <%= link_to "Dojo Forum", root_path, class: "navbar-brand" %>
+          </div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
+            <ul class="nav navbar-nav pull-right">
+              <% if current_user %>
+                <% if current_user.admin? %>
+                  <li><%= link_to 'Admin Panel', admin_root_path %></li>
+                <% end %>
+              <li>
+                <%= link_to user_path(current_user), class: "nav-avatar" do %>
+                  <%= image_tag current_user.avatar, size: "50" if current_user.avatar? %>
+                <% end %>
+              </li>
+              <li><%= link_to('Edit Profile', edit_user_path(current_user)) %></li>
+              <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
 
-                <%= link_to "Dojo Forum", root_path, class: "navbar-brand" %>
-              </div>
+            <% else %>
+              <li><%= link_to '註冊', new_user_registration_path %></li>
+              <li><%= link_to '登入', new_user_session_path %></li>
+            <% end %>
+            </ul>
+          <!-- </div> -->
+        </div>
+      </nav>
 
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="pull-right text-right nav navbar-nav">
-                  <% if current_user %>
-                  <% if current_user.admin? %>
-                 <li><%= link_to 'Admin後台', admin_categories_path %></li>
-                 <% end %>
-                  <li><p class="navbar-text">Hi, <%= current_user.email %></p></li>
-                  <li><%= link_to 'Profile', user_path(current_user) %></li>
-                  <li><%= link_to('登出', destroy_user_session_path, method: :delete) %></li>
-                  <li><%= link_to('修改密碼', edit_user_registration_path) %></li>
-                  <% else %>
-                  <li><%= link_to('註冊', new_user_registration_path) %></li>
-                  <li><%= link_to('登入', new_user_session_path) %></li>
-                  <% end %>
-                </ul>
-              </div>
-            </div>
-          </nav>
 
-          <% if flash[:notice] %>
+
+         <% if flash[:notice] %>
               <div class="container">
                 <div class="row">
 
@@ -68,6 +71,11 @@
                  </div>
                </div>
             <% end %>
-    <%= yield %>
+
+
+          <div class="container">
+         <%= yield %>
+      </div>
+
   </body>
 </html>
