add post index view and update routes.rb and nav bar link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
               <span class="icon-bar"></span>
             </button>
             <%= link_to "Dojo Forum", root_path, class: "navbar-brand" %>
+            <%= link_to "Feeds", feeds_posts_path, class: "navbar-button" %>
+            <%= link_to "All Post", root_path, class: "navbar-button" %>
+            <%= link_to "New Post", new_post_path, class: "navbar-button" %>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
