--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,32 @@
 <h1>front</h1>
+<div class="container">
+  <div class="row">
+
+    <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Comments count ▽</th>
+            <th>Post title</th>
+            <th>Last commented at ▽</th>
+            <th>Viewed count ▽</th>
+
+          </tr>
+        </thead>
+        <tbody>
+
+          <% @posts.each do |post| %>
+          <tr>
+            <th scope="row"><%#= post.comments.count %></th>
+            <td><%= post.title %></td>
+            <td><%#= post.comments.last.created_at %></td>
+            <td><%#= post.views.count %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+
+
+     <%= paginate @posts %>
+
+   </div>
+ </div>
