--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -31,7 +31,7 @@
            </tr>
          </thead>
          <tbody>
-         <%= form_tag(toggle_admin_admin_users_path, method: :put) do %>
+
            <% @users.each do |user| %>
            <tr>
              <th scope="row"><%= user.id %></th>
@@ -39,20 +39,22 @@
              <td><%= user.email %></td>
              <td><%= user.intro %></td>
              <td><%= user.role %></td>
-             <td><% unless user.id == current_user.id %>
-                 <%= check_box_tag "user_ids[]", user.id %>
-               <% end %>
-               <%#= render_user_role(user) %>
-
-             </td>
+             <td>
+            <%= form_tag(admin_user_path(user.id), :method => 'post') do  %>
+              <div class="input-group">
+                <%= select_tag('role', options_for_select([['Admin', 'admin'], ['Normal User', 'normal']], user.role == 'admin' ? "admin" : "normal") )%>
+                <%= submit_tag "Update" %>
+              </div>
+            <% end %>
+          </td>
            </tr>
 
            <% end %>
          </tbody>
        </table>
 
-      <%= submit_tag "變更使用者權限" %></td>
+
       <%= paginate @users %>
-    <% end %>
+
     </div>
   </div>
