--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -35,7 +35,7 @@
            <% @users.each do |user| %>
            <tr>
              <th scope="row"><%= user.id %></th>
-             <td><%= user.name %></td>
+             <td><%= link_to user.name, user_path(user) %></td>
              <td><%= user.email %></td>
              <td><%= user.intro %></td>
              <td><%= user.role %></td>
