--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,47 @@
 <div class="container">
-  <div class="row">
-         <div class="col-md-12">
-           <div class="page-header">
-             <h1>Profile</h1>
+   <div class="row">
+     <div class="col-md-10 col-md-offset-1">
+       <div class="page-header">
+         <div class="col-md-3 col-sm-4">
+           <div class="text-center">
+             <%= image_tag @user.avatar, class: "img-responsive img-rounded" %>
            </div>
          </div>
 
-     <ul>
+         <div class="col-md-9 col-sm-8">
+           <h2><%= @user.name %></h2>
+           <p><strong><%= @user.email %></strong></p>
 
-      <% @users.each do |user| %>
-        <div class="col-md-3 col-sm-4 col-xs-6 text-center user-item">
-
-          <%= link_to user_path(user) do %>
-          <% if user.avatar? %>
-            <%= image_tag user.avatar, class: "img-rounded", size: "50" %>
-          <% else %>
-            <%= image_tag "http://via.placeholder.com/120x120", class: "img-responsive center-block img-rounded"  %>
-          <% end %>
-
-           <!-- <%= image_tag(user.avatar, class: "img-responsive") %> -->
-            <h4><%= user.name %></h4>
-         <% end %>
-
-
-
+           <div><%= simple_format @user.intro %></div>
+           <% if @user.email == current_user.email %>
+             <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-info" %>
+             <%#= link_to 'Friend List', friend_list_user_path(@user), class: "btn btn-info" %>
+             <%= link_to 'Edit Password',edit_user_registration_path, class: "nav-text btn btn-info" %>
+           <% end %>
          </div>
-      <% end %>
+         <div class="clearfix"></div>
+       </div>
+      <br>
 
-     </ul>
- </div>
-</div>
+        <div class="col-md-9 col-sm-8">
+           <div class="panel panel-default">
+             <div class="panel-heading">
+               <h3 class="panel-title"><strong></strong> My Post</h3>
+             </div>
+             <div class="panel-body">
+               <% @posts.each do |post| %>
+
+               <%= link_to post_path(post) do %>
+               <div class="my-restaurant">
+
+                 <h5><%= post.title %></h5>
+               </div>
+               <% end %>
+              <% end %>
+             </div>
+           </div>
+           <% if @user == current_user %>
+             <%= link_to "New Post", new_post_path, class: "btn btn-primary" %>
+           <% end %>
+         </div>
+       </div>
