fix collect action

--- a/app/views/shared/_collect.html.erb
+++ b/app/views/shared/_collect.html.erb
@@ -1,5 +1,5 @@
-<%# if post.is_collected?(current_user) %>
-  <%#= link_to 'Uncollect', uncollect_post_path(post), remote: true, method: :post, class: "btn btn-info", id: "uncollect-#{post.id}" %>
-<%# else %>
-  <%#= link_to 'Collect', collect_post_path(post), remote: true, method: :post, class: "btn btn-primary", id: "collect-#{post.id}" %>
-<%# end %>
+<% if post.is_collected?(current_user) %>
+  <%= link_to 'Uncollect', uncollect_post_path(post), method: :post, class: "btn btn-sm btn-info" %>
+<% else %>
+  <%= link_to 'Collect', collect_post_path(post), method: :post, class: "btn btn-sm btn-primary" %>
+<% end %>
