--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,9 +14,9 @@
 
            <div><%= simple_format @user.intro %></div>
            <% if @user.email == current_user.email %>
-             <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-info" %>
+             <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-sm btn-info" %>
              <%#= link_to 'Friend List', friend_list_user_path(@user), class: "btn btn-info" %>
-             <%= link_to 'Edit Password',edit_user_registration_path, class: "nav-text btn btn-info" %>
+             <%= link_to 'Edit Password', edit_user_registration_path, class: "nav-text btn btn-sm btn-info" %>
            <% end %>
          </div>
          <div class="clearfix"></div>
