--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,14 +1,18 @@
 <div class="container">
   <div class="row">
 
-    <ul class="nav nav-tabs">
-       <li role="presentation" class="active">
-        <%= link_to 'Category List', admin_categories_path %>
+    <ul class="nav nav-tabs nav-fill">
+      <li class="nav-item">
+        <%= link_to_unless_current "Category List", admin_categories_path, class: "nav-link" do %>
+          <%= link_to "Category List", admin_categories_path, class: "nav-link active bg-light" %>
+        <% end %>
       </li>
-      <br>
-       <li role="presentation" >
-        <%= link_to 'User List', admin_users_path %>
+      <li class="nav-item">
+        <%= link_to_unless_current "User List", admin_users_path, class: "nav-link" do %>
+          <%= link_to "User List", admin_users_path, class: "nav-link active bg-light" %>
+        <% end %>
       </li>
+
     </ul>
   </div>
 </div>
@@ -59,7 +63,10 @@
           <% end %>
         </tbody>
       </table>
-     <%= paginate @categories %>
+      <div class="m-auto">
+      <%= paginate @categories %>
+    </div>
+     <%#= paginate @categories %>
     </div>
    </div>
   </div>
