--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,18 +11,21 @@
          <div class="col-md-9 col-sm-8">
            <h2><%= @user.name %></h2>
            <p><strong><%= @user.email %></strong></p>
+           <%= render partial: "shared/friend_button", locals: { user: @user } %>
+
 
            <div><%= simple_format @user.intro %></div>
-           <% if @user.email == current_user.email %>
+           <% if @user == current_user %>
              <%= link_to 'Edit Profile', edit_user_path(@user), class: "btn btn-sm btn-info" %>
              <%#= link_to 'Friend List', friend_list_user_path(@user), class: "btn btn-info" %>
              <%= link_to 'Edit Password', edit_user_registration_path, class: "nav-text btn btn-sm btn-info" %>
            <% end %>
+
          </div>
          <div class="clearfix"></div>
        </div>
       <br>
-
+      <%= render partial: "shared/navtab_user", locals: { user: @user } %>
         <div class="col-md-9 col-sm-8">
            <div class="panel panel-default">
              <div class="panel-heading">
@@ -32,7 +35,7 @@
                <% @posts.each do |post| %>
 
                <%= link_to post_path(post) do %>
-               <div class="my-restaurant">
+               <div class="my-post">
 
                  <h5><%= post.title %></h5>
                </div>
