--- a/app/views/users/collects.html.erb
+++ b/app/views/users/collects.html.erb
@@ -4,20 +4,15 @@
   <div class="row">
     <table class="table table-hover text-center bg-light">
       <tbody>
-        <% @posts.each do |post| %>
+        <% @collected_posts.each do |post| %>
           <tr>
             <td data-link="<%= post_path(post) %>"><%= post.title %></td>
-            <td data-link="<%= post_path(post) %>">Published</td>
-            <td data-link="<%= post_path(post) %>"><%= post.updated_at.strftime("%Y-%m-%d") %></td>
             <td>
-              <%= render partial: "shared/edit_buttons", locals: { type: "Post", post: post } %>
+              <%= render partial: "shared/collect_button", locals: { post: post } %>
             </td>
           </tr>
         <% end %>
       </tbody>
     </table>
-    <% if @user == current_user %>
-      <%= link_to "New Post", new_post_path, class: "btn btn-info" %>
-    <% end %>
   </div>
 </div>
