--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -1,3 +1,5 @@
+<%= render partial: "shared/user_profile", locals: { user: @user } %>
+<%= render partial: "shared/navtab_user", locals: { user: @user } %>
 <div class="container border bg-light">
   <h5 class="text-center">
     Waiting for friends response
@@ -10,8 +12,8 @@
     <% end %>
   </div>
 </div>
-<div class="container border bg-dark">
-  <h5 class="text-center text-white">
+<div class="container border bg-white">
+  <h5 class="text-center text-black">
     My Friend request
   </h5>
   <div class="row" id="unaccept-friend">
@@ -29,7 +31,7 @@
   <div class="row" id="friend">
     <% @friends.each do |user| %>
       <div class="col-sm-2" id="user-<%= user.id %>">
-        <%= render partial: "sharedfriend_profile", locals: { user: user } %>
+        <%= render partial: "shared/friend_profile", locals: { user: user } %>
       </div>
     <% end %>
   </div>
