--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,78 +7,79 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <%= link_to "Dojo Forum", root_path, class: "navbar-brand" %>
-            <%= link_to "Feeds", feeds_path, class: "navbar-button" %>
-            <%= link_to "All Post", root_path, class: "navbar-button" %>
-            <%= link_to "New Post", new_post_path, class: "navbar-button" %>
-          </div>
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
-            <ul class="nav navbar-nav pull-right">
-              <% if current_user %>
-                <% if current_user.admin? %>
-                  <li><%= link_to 'Admin Panel', admin_root_path %></li>
-                <% end %>
-              <li>
-                <%= link_to user_path(current_user), class: "nav-avatar" do %>
-                  <%= image_tag current_user.avatar, size: "50" if current_user.avatar? %>
-                <% end %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <%= link_to "Forum", root_path, class: "navbar-brand" %>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <%= link_to "Feeds", feeds_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "All Post", posts_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "New Post", new_post_path, class: "nav-link" %>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+            <% if current_user %>
+              <% if current_user.admin? %>
+                <li class="nav-item">
+                  <%= link_to "Admin" , admin_root_path, class: "nav-link" %>
+                </li>
+              <% end %>
+              <li class="nav-item">
+                <a class="nav-link" href="">
+                  <%= current_user.email %>
+                  (<%= current_user.role.capitalize %>)
+                </a>
               </li>
-              <li><%= link_to('Profile', user_path(current_user)) %></li>
-              <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
-
+              <li class="nav-item">
+                <%= link_to "Profile" , user_path(current_user), class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+              </li>
             <% else %>
-              <li><%= link_to '註冊', new_user_registration_path %></li>
-              <li><%= link_to '登入', new_user_session_path %></li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Hi, Guest</a>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
+              </li>
             <% end %>
-            </ul>
-          <!-- </div> -->
+          </ul>
         </div>
       </nav>
-
-
-
-         <% if flash[:notice] %>
-              <div class="container">
-                <div class="row">
-
-                   <div class="alert alert-success alert-dismissible" role="alert">
+          <% if flash[:notice] %>
+            <div class="container">
+              <div class="row">
+               <div class="alert alert-success alert-dismissible" role="alert">
                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <%= notice %>
+                  <%= notice %>
                </div>
-                 </div>
-               </div>
-               <% end %>
-
-               <% if flash[:alert] %>
-               <div class="container">
-                 <div class="row">
-
-                   <div class="alert alert-danger alert-dismissible" role="alert">
+              </div>
+            </div>
+          <% end %>
+          <% if flash[:alert] %>
+            <div class="container">
+                <div class="row">
+                  <div class="alert alert-danger alert-dismissible" role="alert">
                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                   <%= alert %>
+                    <%= alert %>
                   </div>
                  </div>
                </div>
             <% end %>
-
-
           <div class="container">
          <%= yield %>
       </div>
-
   </body>
 </html>
