--- a/app/views/shared/_edit_buttons.html.erb
+++ b/app/views/shared/_edit_buttons.html.erb
@@ -12,7 +12,7 @@
 <% else %>
   <% if comment.user == current_user || current_user.admin? %>
     <div class="buttons">
-      <%= link_to edit_current_comment_post_path(post, comment_id: comment.id), remote: true, class: "p-2" do %>
+      <%= link_to edit_post_comment_path(post, comment_id: comment.id), class: "p-2" do %>
         <%= fa_icon "edit 2x" %>
       <% end %>
       <%= link_to post_comment_path(post,comment), method: :delete, data: { confirm: "確定刪除？" }, class: "p-2 text-danger" do %>
