--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -18,7 +18,7 @@
 <br>
 <div class="container">
   <div class="row">
-  
+
   <div class="form-inline" >
   <%= form_for [:admin, @category] do |f| %>
     <div class="form-group">
@@ -34,8 +34,8 @@
   <br>
 
     <div class="col-md-12">
-      <table class="table table-bordered">
-        <thead>
+      <table class="table table-hover">
+       <thead class="thead-light">
           <tr>
             <th>ID</th>
             <th>Category Name</th>
