modify layout style

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -6,3 +6,19 @@
   float: none;
   display: inline-block;
 }
+
+textarea#post_content, textarea#comment_content, textarea#user_intro {
+  height: 20em;
+}
+
+div#unaccept-friend, div#friend, div#wait-friend {
+  min-height: 180px;
+}
+
+#site-title {
+  margin-left: 60px;
+}
+
+.borderless td, .borderless th {
+    border: none;
+}
