--- a/app/views/shared/_edit_buttons.html.erb
+++ b/app/views/shared/_edit_buttons.html.erb
@@ -1,23 +1,17 @@
 <% if type == "Post" %>
   <% if post.user == current_user || current_user.admin? %>
     <div class="buttons">
-      <%= link_to edit_post_path(post), class: "p-2" do %>
-        <%= fa_icon "edit 2x" %>
-      <% end %>
-      <%= link_to post_path(post), method: :delete, data: { confirm: "確定刪除？" }, class: "p-2 text-danger" do %>
-        <%= fa_icon "window-close-o 2x" %>
-      <% end %>
+
+        <%= link_to '<span class="glyphicon glyphicon-edit"></span>'.html_safe, edit_post_path(post), class: "btn btn-default" %>
+        <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, post_path(post),method: :delete, data:{ confirm: "Are you sure ?"}, class: "btn btn-default" %>
     </div>
   <% end %>
 <% else %>
   <% if comment.user == current_user || current_user.admin? %>
     <div class="buttons">
-      <%= link_to edit_post_comment_path(post, comment_id: comment.id), class: "p-2" do %>
-        <%= fa_icon "edit 2x" %>
-      <% end %>
-      <%= link_to post_comment_path(post,comment), method: :delete, data: { confirm: "確定刪除？" }, class: "p-2 text-danger" do %>
-        <%= fa_icon "window-close-o 2x" %>
-      <% end %>
+
+      <%= link_to '<span class="glyphicon glyphicon-edit"></span>'.html_safe, edit_post_comment_path(post, comment_id: comment.id), class: "btn btn-default" %>
+      <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, post_comment_path(post,comment),method: :delete, data:{ confirm: "Are you sure ?"}, class: "btn btn-default" %>
     </div>
   <% end %>
 <% end %>
