--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-   <div class="col-md-6 col-md-offset-3">
+   <div class="col-sm-12 mt-3">
     <% if @user.errors.any? %>
       <h4>We have some errors here !</h4>
       <ul>
@@ -10,8 +10,6 @@
       </ul>
       <hr>
      <% end %>
-     
-
     <h2> Edit Profile </h2>
     <tr>
     <%= form_for [@user] do |f| %>
@@ -20,15 +18,13 @@
         <%= f.text_field :name, class: "form-control" %>
       </div>
 
-
       <div class="form-group">
         <%= f.label :intro, "About you" %>
         <%= f.text_area :intro, class: "form-control" %>
       </div>
 
-
+      <%= f.label :avatar, "Avatar" %>
       <div class="form-group">
-        <%= f.label :avatar, "Avatar" %>
         <%= image_tag @user.avatar if @user.avatar? %>
         <%= f.file_field :avatar %>
       </div>
@@ -38,7 +34,7 @@
         <%= link_to "Cancel", user_path(@user), class: "btn btn-default" %>
       </div>
     <% end %>
-
+    </tr>
    </div>
   </div>
 </div>
