--- a/app/views/users/comments.html.erb
+++ b/app/views/users/comments.html.erb
@@ -10,7 +10,10 @@
             <p class="border p-4 rounded bg-white text-black"><%= comment.comment %></p>
           </div>
           <div class="col-sm-2">
-            <%= render partial: "shared/edit_buttons", locals: { type: "Comment", post: comment.post, comment: comment } %>
+            <div class="buttons">
+              <%= link_to '<span class="glyphicon glyphicon-edit"></span>'.html_safe, edit_post_comment_path(post, comment_id: comment.id), class: "btn btn-default" %>
+              <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, post_comment_path(post,comment),method: :delete, data:{ confirm: "Are you sure ?"}, class: "btn btn-default" %>
+            </div>
           </div>
         </div>
       </div>
