--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,11 @@
             <td data-link="<%= post_path(post) %>">Published</td>
             <td data-link="<%= post_path(post) %>"><%= post.updated_at.strftime("%Y-%m-%d") %></td>
             <td>
-              <%= render partial: "shared/edit_buttons", locals: { type: "Post", post: post } %>
+              <% if post.user == current_user || current_user.admin? %>
+              <div class="buttons">
+                  <%= link_to '<span class="glyphicon glyphicon-edit"></span>'.html_safe, edit_post_path(post), class: "btn btn-default" %>
+                  <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, post_path(post),method: :delete, data:{ confirm: "Are you sure ?"}, class: "btn btn-default" %>
+              </div>
             </td>
           </tr>
         <% end %>
