--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,19 +18,19 @@
     <table class="table table-hover text-center">
       <thead>
         <tr>
-          <th>Comments count ▽</th>
-          <th>Post title</th>
-          <th>Last commented at ▽</th>
-          <th>Viewed count ▽</th>
+          <th><%= sort_link(@ransack, :comments_count, "Comments count", default_order: :desc) %></th>
+          <th class="text-left">Title</th>
+          <th><%= sort_link(@ransack, :last_replied_at, "Last commented at", default_order: :desc) %></th>
+          <th><%= sort_link(@ransack, :viewed_count, "Viewed count", default_order: :desc) %></th>
         </tr>
       </thead>
        <tbody>
           <% @posts.each do |post| %>
           <tr>
             <th scope="row"><%= post.comments.count %></th>
-            <td><%=  link_to post.title, post_path(post)%>  <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, post_path(post),method: :delete, data:{ confirm: "Are you sure ?"}, class: "btn btn-default" %></td>
-            <td><%#= post.comments.last.created_at %></td>
-            <td><%#= post.views.count %></td>
+            <td class="text-left"><%=  link_to post.title, post_path(post)%>  <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, post_path(post),method: :delete, data:{ confirm: "Are you sure ?"}, class: "btn btn-default" %></td>
+            <td></td>
+            <td><%= fa_icon "eye" %></td>
           </tr>
           <% end %>
         </tbody>
