--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -4,8 +4,8 @@
       <%= form_for [@post, @comment] do |f| %>
 
         <div class="form-group">
-          <%= f.label :comment, "Comment" %>
-          <%= f.text_area :comment, placeholder: "Add comment", class: "form-control bg-light" %>
+          <%= f.label :content, "Comment" %>
+          <%= f.text_area :content, placeholder: "Add comment", class: "form-control bg-light" %>
         </div>
         <div class="form-group">
           <%= f.submit "Submit", class: "btn btn-info" %>
