--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -42,27 +42,16 @@
 
  <div class="row bg-light">
      <% @post.comments.each do |comment| %>
-       <%#= render partial: "shared/post_item", locals: { type: "Comment", post: @post, comment: comment } %>
+       <%= render partial: "shared/post_item", locals: { type: "Comment", post: @post, comment: comment } %>
        <div class="col-sm-3 border">
 
-         <%#= render partial: "shared/friend_profile", locals: { user: comment.user } %>
-         <div class="user-item text-center mt-3 mb-3">
-           <%= link_to comments_user_path(comment.user), class: "nav-link" do %>
-             <div class="avatar">
-               <%= image_tag comment.user.avatar, width: "100%" if comment.user.avatar? %>
-             </div>
-             <p><strong><%= comment.user.name %></strong></p>
-           <% end %>
+         <%= render partial: "shared/friend_profile", locals: { user: comment.user } %>
 
-           <div class="links" id="user-<%= comment.user.id %>">
-             <%= render partial: "shared/friend_button", locals: { user: comment.user } %>
-           </div>
-         </div>
        </div>
        <div class="col-sm-9 border d-flex align-items-center">
 
          <div class="content-item w-100">
-           <p><%= @comment.comment %></p>
+           <p><%= @comment.content %></p>
            <div class="row">
              <div class="col-sm-2 offset-sm-10">
 
@@ -88,7 +77,7 @@
      <div class="col-sm-12 border">
        <%= form_for [@post, @comment] do |f| %>
          <div class="form-group">
-           <%= f.text_area :comment, placeholder: "Please leave comment！", class: "form-control mt-4 bg-light" %>
+           <%= f.text_area :content, placeholder: "Please leave comment！", class: "form-control mt-4 bg-light" %>
          </div>
          <div class="form-group">
            <%= f.submit class: "btn btn-primary btn-xs" %>
