--- a/app/views/shared/_navtab_user.html.erb
+++ b/app/views/shared/_navtab_user.html.erb
@@ -18,9 +18,9 @@
           <% end %>
         </li>
         <li class="nav-item">
-          <%#= link_to_unless_current "My Draft", drafts_user_path(user), class: "nav-link" do %>
-            <%#= link_to "My Draft", drafts_user_path(user), class: "nav-link active bg-light" %>
-          <%# end %>
+          <%= link_to_unless_current "My Draft", drafts_user_path(user), class: "nav-link" do %>
+            <%= link_to "My Draft", drafts_user_path(user), class: "nav-link active bg-light" %>
+          <% end %>
         </li>
         <li class="nav-item">
           <%= link_to_unless_current "My Friend", friends_user_path(user), class: "nav-link" do %>
