--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -16,16 +16,29 @@
         <div class="form-group">
           <div class="form-check form-check-inline">
             Who Can See
-
-
+          </div>
+          <div class="form-check form-check-inline">
+            <%= radio_button :post, :authority, "all", { checked: true , class: "form-check-input" } %>
+            <%= label_tag :authority_All, "All", class: "form-check-label" %>
+          </div>
+          <div class="form-check form-check-inline">
+            <%= radio_button :post, :authority, "friend", class: "form-check-input" %>
+            <%= label_tag :authority_Friend, "Friend", class: "form-check-label" %>
+          </div>
+          <div class="form-check form-check-inline">
+            <%= radio_button :post, :authority, "myself", class: "form-check-input" %>
+            <%= label_tag :authority_Myself, "Myself", class: "form-check-label" %>
           </div>
         </div>
         <div class="form-group">
           <div class="form-check form-check-inline">
             Category
           </div>
-
-
+          <div class="form-check form-check-inline">
+            <%= f.collection_check_boxes :category_ids, Category.all, :id, :name, {}, {multiple: true, class: "form-check-input"} do |cb| %>
+              <%= cb.label(class: "form-check-label mr-2") { cb.check_box(class: "form-check-input") + cb.text } %>
+            <% end %>
+          </div>
         </div>
         <div class="form-group">
           Status:
