--- a/app/views/users/comments.html.erb
+++ b/app/views/users/comments.html.erb
@@ -7,7 +7,7 @@
         <div class="row align-items-center">
           <div class="col-sm-8 offset-sm-2" data-link="<%= post_path(comment.post) %>">
             <h4 class="m-3"><%= comment.post.title %></h4>
-            <p class="border p-4 rounded bg-white text-black"><%= comment.comment %></p>
+            <p class="border p-4 rounded bg-white text-black"><%= comment.content %></p>
           </div>
           <div class="col-sm-2">
             <%= render partial: "shared/edit_button", locals: { type: "Comment", post: comment.post, comment: comment } %>
