--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap/dist/css/bootstrap
-
+ *= require font-awesome
  */
   @import "bootstrap-sprockets";
   @import "bootstrap";
