--- a/app/views/users/comments.html.erb
+++ b/app/views/users/comments.html.erb
@@ -6,7 +6,7 @@
       <div class="col-sm-12 border-top border-buttom bg-light">
         <div class="row align-items-center">
           <div class="col-sm-8 offset-sm-2" data-link="<%= post_path(comment.post) %>">
-            <h4 class="m-3"><%= comment.post.title %></h4>
+            <h4 class="m-3"><%= link_to comment.post.title, post_path(post)%></h4>
             <p class="border p-4 rounded bg-white text-black"><%= comment.content %></p>
           </div>
           <div class="col-sm-2">
