--- a/app/views/users/friends.html.erb
+++ b/app/views/users/friends.html.erb
@@ -7,7 +7,7 @@
   <div class="row" id="wait-friend">
     <% @unconfirm_friends.each do |user| %>
       <div class="col-sm-2" id="user-<%= user.id %>">
-        <%= render partial: "shared/user_item", locals: { user: user } %>
+        <%= render partial: "shared/friend_profile", locals: { user: user } %>
       </div>
     <% end %>
   </div>
@@ -32,6 +32,7 @@
     <% @friends.each do |user| %>
       <div class="col-sm-2" id="user-<%= user.id %>">
         <%= render partial: "shared/friend_profile", locals: { user: user } %>
+        <%= link_to "Unfriend", friendships_path(user), method: :delete, class: 'btn btn-danger padding-buttom-avatar' %>
       </div>
     <% end %>
   </div>
